--- a/OpenGL/Game/Game.vcxproj
+++ b/OpenGL/Game/Game.vcxproj
@@ -190,11 +190,15 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugEditor|Win32'">
@@ -207,11 +211,15 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseGame|Win32'">
@@ -226,13 +234,17 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseEditor|Win32'">
@@ -247,13 +259,17 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugGame|x64'">
@@ -266,11 +282,15 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugEditor|x64'">
@@ -283,11 +303,15 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseGame|x64'">
@@ -302,13 +326,17 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseEditor|x64'">
@@ -323,17 +351,21 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"</Command>
+      <Command>xcopy /E /Y /I "$(ProjectDir)Assets" "$(OutDir)/Assets"
+xcopy /E /Y /I "$(SolutionDir)Deps/Runtime" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameProgram.cpp" />
+    <ClCompile Include="Source\Private\GameProgram.cpp" />
     <ClCompile Include="Source\Private\main.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='DebugGame|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='DebugEditor|Win32'">NotUsing</PrecompiledHeader>
@@ -356,7 +388,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameProgram.h" />
+    <ClInclude Include="Source\Public\GameProgram.h" />
     <ClInclude Include="Source\Public\PCH.h" />
   </ItemGroup>
   <ItemGroup>
